--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -106,6 +106,12 @@
             <version>1.6.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>3.2.5</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
