--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=backend
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/food_db
+spring.datasource.username=coder2client
+spring.datasource.password=pastoral2u
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
