--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=backend
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/food_db
-spring.datasource.username=coder2client
-spring.datasource.password=pastoral2u
+spring.datasource.username=username
+spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
