--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -31,6 +31,7 @@ build/
 
 ### VS Code ###
 .vscode/
+.env
 
 # application-example.properties
 spring.datasource.url=jdbc:postgresql://localhost:5432/food_db
