--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,3 +10,15 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 secretJwtString = ${SECRETE_JWT}
+
+
+#Email Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=kaybiel4u@gmail.com
+spring.mail.password=ssbt dyrs qvwj genj
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.default-encoding=UTF-8
