--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=backend
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/food_db
-spring.datasource.username=username
-spring.datasource.password=password
+spring.datasource.username=coder2client
+spring.datasource.password=pastoral2u
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -22,3 +22,10 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.default-encoding=UTF-8
+
+
+#AWS Configuration
+aws.s3.region =${S3_REGION}
+aws.s3.bucket =${S3_BUCKET}
+aws.accessKeyId =${ACCESS_KEY_ID}
+aws.secretKey =${SECRET_KEY}
