Handling Email custom templates

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -29,3 +29,7 @@ aws.s3.region =${S3_REGION}
 aws.s3.bucket =${S3_BUCKET}
 aws.accessKeyId =${ACCESS_KEY_ID}
 aws.secretKey =${SECRET_KEY}
+
+##LOCAL REACT FRONTEND
+base.payment.link=${BASE_PAYMENT_LINK}
+frontend.base.url=${FRONTEND_URL}
