Handling Payment module

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -33,3 +33,7 @@ aws.secretKey =${SECRET_KEY}
 ##LOCAL REACT FRONTEND
 base.payment.link=${BASE_PAYMENT_LINK}
 frontend.base.url=${FRONTEND_URL}
+
+#Strip Credentials
+stripe.api.public.key=${STRIPE_PUBLIC_KEY}
+stripe.api.secrete.key=${STRIPE_SECRETE_KEY}
