--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -34,6 +34,6 @@ aws.secretKey =${SECRET_KEY}
 base.payment.link=${BASE_PAYMENT_LINK}
 frontend.base.url=${FRONTEND_URL}
 
-#Strip Credentials
+#Stripe Credentials
 stripe.api.public.key=${STRIPE_PUBLIC_KEY}
 stripe.api.secrete.key=${STRIPE_SECRETE_KEY}
