Handling Frontend module

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -25,10 +25,12 @@ spring.mail.default-encoding=UTF-8
 
 
 #AWS Configuration
-aws.s3.region =${S3_REGION}
-aws.s3.bucket =${S3_BUCKET}
-aws.accessKeyId =${ACCESS_KEY_ID}
-aws.secretKey =${SECRET_KEY}
+# Use Spring default placeholder syntax to avoid startup failure when environment variables are not set.
+# Example: aws.s3.region=${S3_REGION:us-east-1}
+aws.s3.region=${S3_REGION:us-east-1}
+aws.s3.bucket=${S3_BUCKET:local-bucket}
+aws.accessKeyId=${ACCESS_KEY_ID:}
+aws.secretKey=${SECRET_KEY:}
 
 ##LOCAL REACT FRONTEND
 base.payment.link=${BASE_PAYMENT_LINK}
